# baymax-agent

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_EN.md  baymax.sh  claude_desktop_config.json  env.example  index.js  mcp_server.py  package.json  pyproject.toml  test_mcp_server.py
src/baymax/: __init__.py  agent.py  cli.py  model.py  model_manager.py  prompts.py
src/baymax/tools/: __init__.py  analysis.py  api.py  filings.py  financials.py  prices.py  prices_improved.py
src/baymax/utils/: intro.py  logger.py  ui.py
src/dexter/: agent.py  model.py
src/dexter/tools/: api.py
src/dexter/utils/: ui.py
